--- a/html/style.css
+++ b/html/style.css
@@ -17,15 +17,18 @@ body {
 }
 
 #head {
-padding-left: 20px;
-float: left;
+	padding-left: 50px;
+	float: left;
 }	
 
 
 .nav {
 	float: right;
 	display: inline-block;
-	margin: 30px;
+	margin: auto;
+	padding-top: 10px;
+	padding-left: 50px;
+	padding-right: 50px;
 }
 
 a {
@@ -34,15 +37,32 @@ a {
 }
 
 .section2 {
-	display: block;
-	margin:auto;
+	float: left;
+	margin-left:200px;
 	margin-top: 100px;
-	width:75%;
 
 }
 
-.test {
-	width: 300px;
-	height: 300px;
+.img {
+	width: 400px;
+	height: 400px;
 }
 
+.section3 {
+	text-align: right;
+	line-height: 3em;
+	float: left;
+	margin-left:200px;
+	margin-top: 100px;
+}
+
+.section4 {
+	float: left;
+}
+
+.colorpick {
+	height: 12px;
+	width: 100px;
+	outline: 2px;
+	outline-color: #000;
+}
